test/fixtures/vmapi-server-throwing-expected-stderr.txt
/opt/smartdc/vmapi/test/fixtures/vmapi-server-with-throwing-handler.js:22
    throw new Error('boom');
    ^

Error: boom
    at Server.throwingRestifyHandler (/opt/smartdc/vmapi/test/fixtures/vmapi-server-with-throwing-handler.js:22:11)